# flexi-guitar

./: .env_example  .gitignore  README.md  api.py  config.py  docker-compose.yml  main.py  notes.json  pyproject.toml  scale.py  utils.py
models/: __init__.py  _common.py  fretboard.py  note.py  scale.py  string.py  tuning.py
scripts/: create_note.py  create_scale.py  create_tuning.py
static/: app.js  index.html  styles.css
static/js/: app.js  instruments.js
tests/: test_scale.py
