[tool.poetry]
name = "flexi-guitar"
version = "0.1.0"
description = ""
authors = ["Alex <ascornelio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
